Fix small vertical alignment issue (it was 1px larger than it should)

--- a/src/components/MessageBar/MessageBar.css
+++ b/src/components/MessageBar/MessageBar.css
@@ -7,7 +7,7 @@
   border-radius: 1px;
   border-left-width: 4px;
   color: $textColor;
-  padding: 7px 12px 8px;
+  padding: 7px 12px 7px;
 }
 
 .y-message-bar__type-warning {
